send discord webhook on new song

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,3 +17,4 @@ jobs:
         env:
           REDIS_URL: ${{ secrets.redisURL }}
           API_KEY: ${{ secrets.apiKey }}
+          WEBHOOK_URL: ${{ secrets.webhookURL }}
