--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@googleapis/youtube": "^2.0.0",
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "redis": "^4.0.0",
     "tinyduration": "^3.2.2"
   }
